--- a/.env
+++ b/.env
@@ -6,9 +6,9 @@
 # DATABASE_PORT=3306
 # TOKEN_KEY=jshfuehuih$267hjhsdfkjnjkncshlakjshf902388
 
-# CLOUDINARY_CLOUD_NAME=dpszokfiw
-# CLOUDINARY_API_KEY=983349625161196
-# CLOUDINARY_API_SECRET=Ob1hPTYLnNcuN6nB7aVW7N_mNXA
+CLOUDINARY_CLOUD_NAME=dpszokfiw
+CLOUDINARY_API_KEY=983349625161196
+CLOUDINARY_API_SECRET=Ob1hPTYLnNcuN6nB7aVW7N_mNXA
 
 DATABASE_USER=root
 DATABASE_HOST=localhost
